@@ -1,3 +1,7 @@
+2008-01-07  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
+	* plugin/01sp.rb: improve previous incompatible change.
+
+
 2008-01-06  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
 	* hiki/config.rb, hiki/hiki_formatter.rb,
 	misc/webrick/hikilet.rb, plugin/01sp.rb, hiki/pluginutil.rb,
